// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`composeFactory test suite Base component render 1`] = `
<View
  style={
    {
      "backgroundColor": "black",
      "borderColor": "green",
      "borderWidth": 1,
      "height": 20,
      "width": 30,
    }
  }
>
  <Text
    style={
      {
        "color": "white",
      }
    }
  >
    Hello
  </Text>
</View>
`;

exports[`composeFactory test suite Customized component render 1`] = `
<View
  style={
    {
      "backgroundColor": "pink",
      "borderColor": "green",
      "borderWidth": 1,
      "height": 20,
      "width": 30,
    }
  }
>
  <Text
    style={
      {
        "color": "white",
      }
    }
  >
    Hello
  </Text>
</View>
`;
